update projects, images, links. organize code

--- a/sidebar.css
+++ b/sidebar.css
@@ -1,22 +1,20 @@
 /*#region sideBar*/
 nav.sideNav{
     display: none;
-    z-index: 990;
+    z-index: 999;
 }
 .webTitle{
     color: rgb(158, 170, 175);
-    backdrop-filter: blur(4px);
-    margin: 0.6rem;
-    /* border: 2px solid red; */
-}   .webTitle > h3{
-        font-size: 1.8rem;
+    margin: 1.2rem;
+}   
+    .webTitle > a > h3{
+        font-size: 2rem;
         font-weight: 800;
-    } .webTitle > p{
+    } .webTitle > a > p{
         font-weight: 500;
-        font-size: 0.8rem;
-        margin-left: 3rem;
+        font-size: 1rem;
+        margin-left: 4rem;
         margin-top: -0.3rem;
-        white-space: nowrap;
     }
 .sideBarContainer{
     position: fixed;
@@ -24,13 +22,34 @@ nav.sideNav{
     right: 0;
     height: 100vh;
     width: 30%;
+    min-width: fit-content;
+    padding: 5px;
     background-color: rgba(245, 245, 245, 0.623);
+    backdrop-filter: blur(8px);
 }
+ul.sideBar{
+    display: flex;
+    flex-flow: column wrap;
+    width: 100%;
+    align-items: flex-start;
+    justify-content: flex-start;
+}
+    .sideBar li, .sideBar a{
+        width: 100%;
+        line-height: 2.5rem;
+        padding: 3px;
+        padding-left: 1rem;
+        display: block;
+    }.sideBarLst:hover, .sideBar a:hover{
+        width: 100%;
+        background-color: #d6d6d6;
+        border-radius: 2px;
+        transition: background-color 0.3s ease;
+    }
 .sideBarContainer .social-icons{
     margin-top: 0.5rem;
     margin-left: 1.7rem;
-}
-
+}  
 .sideBarSocialIcon{
     border: none;
     color: #606060;
@@ -40,39 +59,44 @@ nav.sideNav{
     cursor: pointer;
     opacity: 0;
     transition: opacity 2s ease;
-}   
+}   .sideBarSocialIcon:nth-child(2){
+    transition-delay: 0.3s;
+}   .sideBarSocialIcon:nth-child(3){
+    transition-delay: 0.6s;
+}
 
 .sidebarIconAnimate{
     opacity: 1;
 } 
 
-
-ul.sideBar{
-    display: flex;
-    flex-flow: column wrap;
-    width: 100%;
-    backdrop-filter: blur(8px);
-    align-items: flex-start;
-    justify-content: flex-start;
-} 
-    .sideBar li{
-        width: 100%;
-        line-height: 2.5rem;
-        padding: 3px;
-        padding-left: 1rem;
-    }   .sideBar a{
-        width: 100%;
-        height: 100%;
-        line-height: 2.5rem;
-        display: block;
+.confirmCopyBox{
+    width: fit-content;
+    height: fit-content;
+    white-space: nowrap;
+    padding: 0.2rem 0.2rem 0.3rem;
+    position: absolute;
+    border: 1px solid lime;
+    border-radius: 10px;
+    background-color: white;
+    font-weight: 700;
+    font-size: 1rem;
+    text-align: center;
+    opacity: 0;
+    z-index: 99;
+}   
+    .confirmCopyBoxFade{
+        animation: fade 2s ease forwards;
+    }  
+    .checkIcon{
+        background-color: lime;
+        border-radius: 50%;
+        color: white;
+        font-size: 1.4rem;
+        margin-left: 5px;
     }
-        .sideBarLst:hover, .sideBar a:hover{
-            width: 100%;
-            background-color: #d6d6d6;
-            border-radius: 2px;
-            transition: background-color 0.3s ease;
-        }
-/*#endregion sideBar*/
+    @keyframes fade{
+        45%{ opacity: 1;}
+    }
 
 @media screen and (min-width: 576px){
     .webTitle{
@@ -89,42 +113,38 @@ ul.sideBar{
 
 @media screen and (min-width: 1000px){
     /*#region SideBar*/
-    nav.sideNav{
-        display: flex;
-        flex-direction: column;
-        height: 100%;
-        width: 25%;
-        min-width: 250px;
-    }   .webTitle > h3{
-            color: #606060;
-            font-size: 2.5rem;
-        } .webTitle > p{
-            color: white;
-            font-size: 1.2rem;
-        }
-        .sideBarContainer{
-            background-color: rgb(127, 179, 247);
-            left: 0;
-            width: 25%;
-            min-width: 250px;
+        nav.sideNav{
             display: flex;
             flex-direction: column;
-            gap: 25px;
-        } .sideBar{
+            height: 100%;
             width: 25%;
-            backdrop-filter: none;
-        } .sideBar a{
-            color: white;
-            font-size: 1.5rem;
-            padding-left: 1rem;
-        } #closeBtn{
-            display: none;
-        } 
-        .sideBarContainer .social-icons{
-            display: block;
-            color: #606060;
-            font-size: 1.5rem;
-            margin: 1.5rem;
-        }
+        }   .webTitle > a > h3{
+                color: #606060;
+                font-size: 2.5rem;
+            } .webTitle > a > p{
+                color: white;
+                font-size: 1.2rem;
+                margin-top: 5px;
+            }
+            .sideBarContainer{
+                background-color: rgb(127, 179, 247);
+                left: 0;
+                width: 25%;
+                display: flex;
+                flex-direction: column;
+                gap: 25px;
+            } .sideBar{
+                width: 25%;
+                backdrop-filter: none;
+            } .sideBar a{
+                color: white;
+                font-size: 1.5rem;
+                padding-left: 1rem;
+            } #closeBtn{
+                display: none;
+            } 
+            .sideNav .social-icons{
+                display: block;
+            }
 /*#endregion SideBar*/
 }
