--- a/projectPage/projects.css
+++ b/projectPage/projects.css
@@ -54,40 +54,10 @@ h1{
     position: relative;
 }
 
-.confirmCopyBox{
-    width: fit-content;
-    height: fit-content;
-    padding: 0.1rem 0.1rem 0.2rem;
-    position: absolute;
-    top: 1rem;
-    left: 40%;
-    border: 1px solid lime;
-    border-radius: 10px;
-    background-color: white;
-    font-weight: 700;
-    font-size: 1rem;
-    text-align: center;
-    opacity: 0;
-    z-index: 99;
-}   
-    .confirmCopyBoxFade{
-        animation: fade 2s ease forwards;
-    }  
-    .checkIcon{
-        background-color: lime;
-        border-radius: 50%;
-        color: white;
-        font-size: 1.4rem;
-        margin-left: 5px;
-    }
-    @keyframes fade{
-        45%{ opacity: 1;}
-    }
-
 .menuIconBtn{
     width: 50px;
     height: 50px;
-    color: var(--BGBLUE);
+    color: white;
     background-color: transparent;
     border: none;
     font-size: 2rem;
@@ -113,6 +83,9 @@ h1{
     backdrop-filter: blur(7px);
     -webkit-backdrop-filter: blur(7px);
     padding: 1.2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }   
     .project:hover{
         opacity: 0.7;
@@ -122,13 +95,32 @@ h1{
 .projectTitle a{
     color: #606060;
 }
-
-.projectImg{
-    width: 150px;
-    height: 100px;
-    border: 2px solid white;
-    margin-top: 1rem;
+.projectDetail{
+    margin: 10px 0;
+    font-weight: 500;
 }
+
+.projectImgBox{
+    width: 80%;
+    height: auto;
+    min-height: 150px;
+    max-height: 250px;
+    border: 2px solid white;
+    justify-self: end;
+    border-radius: 6px;
+    overflow: hidden;
+}   .projectImg{
+        width: 100%;
+        height: 100%;
+    }
+    .projectNote{
+        transform-origin: 30px 30px;
+    }
+    .projectImg:hover{
+        transform: scale(1.2);
+        transition: transform 1.2s ease;
+    }   
+   
 
 .addNewProject{
     display: flex;
