--- a/projectPage/projects.css
+++ b/projectPage/projects.css
@@ -102,9 +102,8 @@ h1{
 
 .projectImgBox{
     width: 80%;
-    height: auto;
-    min-height: 150px;
-    max-height: 250px;
+    height: 200px;
+    max-height: 200px;
     border: 2px solid white;
     justify-self: end;
     border-radius: 6px;
