--- a/sidebar.css
+++ b/sidebar.css
@@ -6,12 +6,22 @@ nav.sideNav{
 .webTitle{
     color: rgb(158, 170, 175);
     margin: 1.2rem;
+    position: relative;
 }   
+    .webTitle img.mylogo{
+        width: 80px;
+        height: 80px;
+        position: absolute;
+        right: -3px;
+        top: -5px;
+        opacity: 0.35;
+        z-index: -1;
+    }
     .webTitle > a > h3{
         font-size: 2rem;
         font-weight: 800;
     } .webTitle > a > p{
-        font-weight: 500;
+        font-weight: 600;
         font-size: 1rem;
         margin-left: 4rem;
         margin-top: -0.3rem;
@@ -25,7 +35,7 @@ nav.sideNav{
     min-width: fit-content;
     padding: 5px;
     background-color: rgba(245, 245, 245, 0.623);
-    backdrop-filter: blur(8px);
+    backdrop-filter: blur(10px);
 }
 ul.sideBar{
     display: flex;
@@ -118,14 +128,24 @@ ul.sideBar{
             flex-direction: column;
             height: 100%;
             width: 25%;
-        }   .webTitle > a > h3{
+        }   
+            .webTitle img.mylogo{
+                width: 1.5rem;
+                height: 1.5rem;
+                /* right: 73px;
+                top: -8px; */
+                left: 2.2rem;
+                top: 31px;
+                opacity: 0.9;
+            }
+            .webTitle > a > h3{
                 color: #606060;
                 font-size: 2.5rem;
             } .webTitle > a > p{
                 color: white;
                 font-size: 1.2rem;
                 margin-top: 5px;
-            }
+            } 
             .sideBarContainer{
                 background-color: rgb(127, 179, 247);
                 left: 0;
