--- a/projectPage/projects.css
+++ b/projectPage/projects.css
@@ -4,47 +4,40 @@
     box-sizing: border-box;
 }
 :root{
-    --BGBLUE: rgb(127, 179, 247);
+    --BGBLUE: #7fb3f7;
     --BGGRAY: #e9e7e7;
 }
 a, li{
     color: #606060;
     text-decoration: none;
+    cursor: pointer;
+    list-style: none;
+    line-height: 1.5rem;
+    white-space: nowrap;
 }
 
-li::marker{
+/* li::marker{
     content: "";
-}
+} */
 
-body{
-    height: 100%;
-}
+
 main{
     background-color: lightgray;
-    width: 100%;
-    max-width: 100vw;
-    padding: 1rem;
-    display: flex;
-    flex-wrap: wrap;
+    width: min(100%, 100dvw);
+    overflow: hidden;
 }
 
-.sideNav{
-    display: none;
-}
 h1{
     font-size: 2rem;
     color: #606060;
 }
 .projectsContainer{
-    width: 100%;
-    height: 100%;
-    padding: 1rem;
-    padding-bottom: 1.2rem;
-    margin: auto;
+    padding: 1rem 1rem 1.2rem;
     border-radius: 10px;
     background-color: rgba(127, 179, 247, 0.774);
     background: radial-gradient(lightgray, rgba(127, 179, 247, 0.774) 70%);
     opacity: 1;
+    position: relative;
 }
 
 .heading{
@@ -61,7 +54,7 @@ h1{
     background-color: transparent;
     border: none;
     font-size: 2rem;
-}.menuBtn:hover, span.closeBtn:hover{
+}.menuBtn:hover{
     background-color: rgba(234, 236, 236, 0.719);
     box-shadow: 3px 2px 2px #c5c5c5ce;
     border-radius: 50%;
@@ -70,9 +63,9 @@ h1{
 .projects{
     display: grid;
     grid-template: repeat(4, 1fr) / repeat(1, 1fr);
-    gap: 20px;
-    width: 100%;
-    padding: 1.2rem;
+    gap: 1.2rem;
+    /* width: 100%; */
+    padding: 1rem;
     margin-top: 1.2rem;
     border-radius: 10px;
 }
@@ -101,7 +94,7 @@ h1{
 }
 
 .projectImgBox{
-    width: 80%;
+    width: 95%;
     height: 200px;
     max-height: 200px;
     border: 2px solid white;
@@ -121,72 +114,129 @@ h1{
     }   
    
 
-.addNewProject{
-    display: flex;
-    flex-flow: column wrap;
-    align-items: center;
-}
-.wrongCode{
-    color:red;
-    font-size: 1rem;
-}
-
-/*#region add project Form*/
-form.addProjectWindow{
-    display: none;
-    flex-flow: column wrap;
-    padding: 1.2rem;
-    background-color: rgba(255, 255, 255, 0.281);
-    backdrop-filter: blur(10px);
-    border: 3px solid var(--BGBLUE);
-    border-radius: 7px;
-    width: 350px;
+.detailWindow{
+    overflow-y: auto;
+    overflow-x: hidden;
     position: absolute;
-    top: 100px;
-    left: 15%;
-}   .formCloseBtn{
-    align-self: end;
-}   .formCloseBtn:hover{
-    background-color: silver;
-    border-radius: 50%;
-    padding: 2px;
+    /* top: 50%; */
+    left: 50%;
+    /* transform: translate(-50%, -50%); */
+    transform: translate(-50%, 12%);
+    width: 75%;
+    height: min(75%, 650px);
+    padding: 1.1rem;
+    font-size: 1.2rem;
+    font-weight: 600;
+    border: 2px solid #5f7e88;
+    border-radius: 7px;
+    background-color: rgba(240, 255, 255, 0.5);
+    backdrop-filter: blur(10px);
+    
+    opacity: 0;
+    visibility: hidden;
+    display: none;
+    flex-direction: column;
+    gap: 1rem;
+    color: #606060;
 }
-    fieldset{
-        display: table;
-        padding: 1.3rem;
-    } legend{
-        color: var(--BGBLUE);
-        font-size: 1.3rem;
-        font-weight: 600;
-    }
-    label, input{
-        display: table-row;
-        margin-bottom: 10px;
-    } .inputDescription{
-        line-height: 2.5rem;
-    } button.addBtn{
-        width: 70px;
-        height: 40px;
-        border-radius: 10px;
-        border: none;
-        color: white;
-        background-color: var(--BGBLUE);
-        font-weight: 500;
-        box-shadow: 0 6px #999;
-    }   button.addBtn:hover{
-            opacity: 0.7;
-        } button.addBtn:active {
-            opacity: 0.7;
-            box-shadow: 0px 3px #666;
-            transform: translateY(4px);
-        }
 
-/*#endregion add project Form*/
+.detailWindow.visible{
+    opacity: 1;
+    visibility: visible;
+    display: flex;
+    animation: 0.5s detailWindowAnimation 0.1s ease forwards;
+}
+
+.detailWindow::-webkit-scrollbar{
+    display: none;
+}
+
+@keyframes detailWindowAnimation{
+    from{
+        opacity: 0;
+        visibility: hidden;
+        display: none;
+    } to{
+        opacity: 1;
+        visibility: visible;
+        display: flex;
+    }
+}
+
+.detailWindow .projectTitle i{
+    cursor: pointer;
+}
+.detailWindow .projectTitle i:hover, .detailWindow .projectTitle i:active{
+    color: var(--BGBLUE);
+    transition: 0.35s color ease;
+}
+.detailWindow > ul.projectDetail li{
+    cursor: default;
+    list-style: circle;
+    margin-left: 1rem;
+}
+.detailWindow img{
+    border: 2px solid lightblue;
+    border-radius: 5px;
+}
+
+
+.detailWindow .closeBtn{
+    font-size: 1.1rem;
+    font-weight: 700;
+    color: #606060;
+    background-color: transparent;
+    border: 1px solid transparent;
+    border-radius: 50%;
+    padding: 5px 7px;
+    width: 2rem;
+    margin-left: 95%;
+    text-align: center;
+}
+.detailWindow .closeBtn:hover, .detailWindow .closeBtn:focus{
+    cursor: pointer;
+    color: #f54141;
+    border: 1px solid #f54141;
+    transition: 0.5s color ease, 0.4s border ease;
+}
+
+.detailWindow div{
+    border-top: 1px solid #979797;
+    padding: 1rem;
+}
+.detailWindow p{
+    color: #5f7e88;
+}
+
+.detailWindow p strong{
+    color: #606060;
+    font-weight: 700;
+    font-size: 1.3rem;
+}
+
 .ri-add-large-line{
     color: white;
     font-size: 3rem;
     font-weight: 600;
     margin: 1rem;
+}
+.copyrightBG{
+    width: 100%;
+    height: 50px;
+    background-color: var(--BGBLUE);
+    border-radius: 10px 10px 0 0 ;
+}
+.copyright{
+    color: white;
+    font-size: 20px;
+    font-weight: 400;
+    text-align: center;
+}
+.mainBottom{
+    display: none;
+}
+footer{
+    width: 100%;
 }
 
 @media screen and (min-width: 576px){
@@ -196,24 +246,36 @@ form.addProjectWindow{
     .menuIconBtn{
         display: none;
     }
-    form.addProjectWindow{
-        left: 25%;
+    header{
+        width: 80%;
+        margin: auto;
     }
     
 }
-
+@media screen and (min-width: 780px){
+    .detailWindow{
+        width: 70%;
+        height: min(85%, 680px);
+        transform: translate(-50%, 10%);
+    }
+}
 @media screen and (min-width: 1000px){
-    /* .mainContainer{
-        flex-direction: row;
-    } */
     main{
-        flex-wrap: nowrap;
+        display: grid;
+        grid-template-columns: 25% 73%;
+        place-content: center space-between;
+        gap: 0.3rem;
     }
     .projectsContainer{
-        width: 80%;
-        margin: 2rem;
+        width: clamp(700px, 100%, 900px);
+        margin: 1.8rem 1rem 1.5rem 0;
     }
-    form.addProjectWindow{
-        left: 50%;
+    .detailWindow{
+        width: 59%;
+        height: min(88%, 700px);
+        transform: translate(-30%, 8%);
+    }
+    footer{
+        display: none;
     }
 }
